bynkc/tests/fixtures/negative/493_messages_malformed_icu_exact_value_arm/src/bundle.bynk
commons bundle

uses bynk.locale

messages en @reference {
  "cart.count" => "{n, plural, =0 {none} one {#} other {#}}"
}
